# rugregator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ndsmt3.py  old_plan.md  spec.md  wild-puzzling-castle.md
crates/aggregator/: Cargo.toml
crates/aggregator/src/: config.rs  lib.rs  main.rs  storage.rs  storage_rocksdb.rs
crates/aggregator/src/api/: cbor.rs  handlers.rs  mod.rs  server.rs  types.rs
crates/aggregator/src/round/: live_committer.rs  manager.rs  mod.rs  state.rs
crates/aggregator/src/smt/: hash.rs  mod.rs  path.rs  proof.rs  snapshot.rs  tree.rs  types.rs
crates/aggregator/src/smt_disk/: materializer.rs  mod.rs  overlay.rs  persister.rs  snapshot.rs  store.rs  tests.rs
crates/aggregator/src/validation/: mod.rs  predicate.rs  signature.rs  state_id.rs
crates/rsmt/: Cargo.toml
crates/rsmt/src/: consistency.rs  hash.rs  lib.rs  node_serde.rs  path.rs  proof.rs  snapshot.rs  tree.rs  types.rs
crates/smt-store/: Cargo.toml
crates/smt-store/src/: lib.rs  mem.rs  traits.rs
crates/smt-store/src/disk/: cache.rs  materializer.rs  mod.rs  node_key.rs  persister.rs  snapshot.rs  store.rs  tests.rs
scripts/e2e/: run-e2e-test.sh  setup-bft-core.sh  start-aggregator.sh  start-bft-core.sh
scripts/perf-test/: package-lock.json  package.json  perf-test-mt.ts  perf-test.ts
