[workspace]
members = [
    "crates/aggregator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Unicity Network"]

[workspace.dependencies]
tokio        = { version = "1",    features = ["full"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow       = "1"
thiserror    = "1"
hex          = "0.4"
ciborium     = "0.2"
secp256k1    = { version = "0.29", features = ["recovery", "global-context"] }
sha2         = "0.10"
num-bigint   = "0.4"
num-traits   = "0.2"
axum         = { version = "0.7", features = ["json"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["trace", "cors"] }
clap         = { version = "4",   features = ["derive", "env"] }
dashmap      = "6"
futures      = "0.3"
async-trait  = "0.1"
libp2p       = { version = "0.55", features = ["tcp", "noise", "yamux", "identify", "request-response", "tokio", "dns", "secp256k1", "macros"] }
unsigned-varint = { version = "0.8", features = ["futures", "asynchronous-codec"] }
serde_bytes  = "0.11"
serde_tuple  = "0.5"
rand         = "0.8"
