[package]
name        = "rsmt"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sha2.workspace       = true
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace  = true
ciborium.workspace   = true
hex.workspace        = true
anyhow.workspace     = true

[features]
disk-backed = []

[dev-dependencies]
