[package]
name = "smt-store"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rsmt.workspace       = true
rocksdb.workspace    = true
lru.workspace        = true
anyhow.workspace     = true
tracing.workspace    = true
num-bigint.workspace = true
num-traits.workspace = true
hex.workspace        = true
thiserror.workspace  = true

[dev-dependencies]
tempfile = "3"
